# memomind

./: .gitignore  README.md
docs/: PROJECT_BRIEF.md
memoapp/: package-lock.json  package.json  tailwind.config.snippet.ts  tailwind.config.ts
memoapp/app/: globals.css  layout.tsx  loading.tsx  page.tsx
memoapp/app/conversation/: page.tsx
memoapp/app/dashboard/: page.tsx
memoapp/app/garden/: page.tsx
memoapp/app/path/: page.tsx
memoapp/archive/: dashboard-v1.tsx
memoapp/components/: MagicParticles.tsx  MemoMindLanding.tsx
memoapp/components/animations/: DandelionAnimation.tsx  MagicParticles.tsx
memoapp/components/chat/: ChatComposer.tsx  ChatHeader.tsx  ChatMessage.tsx  Conversation.tsx  ConversationSidebar.tsx  HeroScene.tsx
memoapp/components/conversation/: ReflectionSidebar.tsx
memoapp/components/dashboard/: AgeGateModal.tsx  MemoMindDashboard.tsx  MemoMindEntry.tsx  MemoMindGardenPreview.tsx  MemoMindOnboardingToDashboard.tsx  MemoMindTourCarousel.tsx
memoapp/components/icons/: MemoLogo.tsx
memoapp/components/landing/: MemoMindLanding.tsx
memoapp/hexclave/: client.ts
memoapp/settings/: page.tsx
memologic/: main.py  pyproject.toml  routes.py  settings.py
memologic/app/: main.py  routes.py  settings.py
memologic/app/schemas/: conversation.py
memologic/app/services/: conversation_service.py  memo_responder.py  response_generator.py  safety.py
memologic/knowledge/reflections/lojong/: lojong-001.json
memologic/scripts/: check_moderation_live.py
memologic/tests/: conftest.py
memologic/tests/services/: test_safety.py
(+9 files in other folders)
