[project]
name = "memologic"
version = "0.1.0"
description = "A production-ready Retrieval-Augmented Generation (RAG) application built with LangChain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "fastapi>=0.139.0",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]
